# Insight-Engine

./: .gitignore  CLAUDE.md  README.md
backend/: main.py  pyproject.toml
backend/api/: advise.py  blocks.py  chat.py  execution.py  hitl.py  pipelines.py  templates.py
backend/blocks/: _llm_client.py  base.py  integration.py
backend/blocks/analysis/: __init__.py  rfm_analysis.py  segmentation_kmeans.py  segmentation_lca.py
backend/blocks/comparison/: side_by_side_comparator.py
backend/blocks/evaluation/: concept_evaluator.py  rubric_evaluation.py
backend/blocks/generation/: concept_drafter.py  discussion_guide.py  llm_generation.py  stimulus_creator.py
backend/blocks/hitl/: approval_gate.py
backend/blocks/llm_flex/: prompt_flex.py
backend/blocks/reporting/: markdown_report.py  narrative_report.py  pdf_report.py  presentation_outline.py
backend/blocks/routing/: __init__.py  conditional_router.py  threshold_router.py
backend/blocks/sinks/: api_push_sink.py  json_sink.py  notification_sink.py
backend/blocks/sources/: csv_loader.py  csv_source.py  db_source.py  sample_provider_source.py
backend/blocks/transforms/: column_recoding.py  data_cleaning.py  filter_transform.py  segmentation_kmeans.py  weighting.py
backend/chat/: __init__.py  assistant.py  context_builder.py  copilot.py  diff.py  research_advisor.py
backend/cli/: main.py
backend/engine/: __init__.py  executor.py  loop_controller.py  registry.py  state.py  validator.py
backend/reasoning/: __init__.py  dimensions.py  profiles.py  workflows.py
backend/schemas/: advise.py  blocks.py  chat.py  data_objects.py  execution.py  pipeline.py
backend/storage/: runs.py  sqlite.py
backend/templates/: concept_prescreen.json  discussion_guide_builder.json  segmentation_report.json
backend/tests/: test_api_blocks.py  test_api_connection_validation.py  test_api_execution.py  test_api_pipelines.py  test_approval_gate.py  test_cli.py  test_csv_loader.py  test_db_source.py  test_execution_state.py  test_executor.py  test_integration_mixin.py  test_integration_phase2.py  test_llm_client.py  test_registry.py  test_storage.py  test_templates.py  test_threshold_router.py  test_validator.py
backend/tests/blocks/: test_analysis_contract.py  test_discussion_guide.py  test_narrative_report.py  test_pdf_report.py  test_presentation_outline.py  test_segmentation_lca.py  test_weighting.py
backend/tests/chat/: test_assistant.py  test_context_builder.py  test_copilot.py  test_research_advisor.py
backend/tests/cli/: test_create.py  test_resume.py  test_validate.py
backend/tests/reasoning/: test_characterize_stage1.py  test_dimensions.py  test_profiles.py  test_research_advisor.py  test_workflows.py
backend/tests/test_blocks/: test_concept_drafter.py  (+2 more)
(+70 files in other folders)
