[project]
name = "insights-ide-backend"
version = "0.1.0"
description = "Insights IDE — FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.86.0",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "markdown>=3.10.2",
    "numpy>=2.4.3",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "scikit-learn<1.6",
    "stepmix>=2.2.1",
    "typer>=0.24.1",
    "uvicorn[standard]>=0.42.0",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]

[project.scripts]
insights = "cli.main:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
